RESOLVED FIXED170566
Obj-C bindings build fails with CSS_DEVICE_ADAPTATION turned on
https://bugs.webkit.org/show_bug.cgi?id=170566
Summary Obj-C bindings build fails with CSS_DEVICE_ADAPTATION turned on
Tim Horton
Reported 2017-04-06 14:26:36 PDT
Obj-C bindings build fails with CSS_DEVICE_ADAPTATION turned on
Attachments
patch (2.92 KB, patch)
2017-04-06 14:27 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2017-04-06 14:27:26 PDT
WebKit Commit Bot
Comment 2 2017-04-06 15:38:07 PDT
Comment on attachment 306426 [details] patch Clearing flags on attachment: 306426 Committed r215063: <http://trac.webkit.org/changeset/215063>
WebKit Commit Bot
Comment 3 2017-04-06 15:38:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.