Obj-C bindings build fails with CSS_DEVICE_ADAPTATION turned on https://bugs.webkit.org/show_bug.cgi?id=170566

Reviewed by Simon Fraser.

* DOM/DOMCSS.mm:
(kitClass):
Use the WebCore-side enum for this, since that's actually what we're switching over.
This allows us to handle values here without adding them to the API header.
All of the other kitClass() functions work the same way.
Also, unindent for style purposes.


Canonical link: https://commits.webkit.org/187492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215063 268f45cc-cd09-0410-ab3c-d52691b4dbfc